Updated Poker to use the game object

--- a/D1/makefile
+++ b/D1/makefile
@@ -4,8 +4,8 @@ LFLAGS = -lncursesw
 
 all: poker
 
-poker: display.o Frame.o Card.o Hand.o Deck.o Player.o HumanPlayer.o AI.o Advertisement.o Poker.o 
-	 $(CC) Poker.cpp display.o Frame.o Card.o Hand.o Deck.o Player.o HumanPlayer.o AI.o Advertisement.o -o poker $(LFLAGS)
+poker: display.o Frame.o Card.o Hand.o Deck.o Player.o HumanPlayer.o AI.o Advertisement.o GameObject.o Poker.o 
+	 $(CC) Poker.cpp display.o Frame.o Card.o Hand.o Deck.o Player.o HumanPlayer.o AI.o Advertisement.o GameObject.o -o poker $(LFLAGS)
 
 Frame.o: Frame.cpp Frame.h
 	$(CC) $(CFLAGS) Frame.cpp
@@ -29,7 +29,10 @@ AI.o: AI.cpp AI.h
 	$(CC) $(CFLAGS) AI.cpp
 
 Advertisement.o: ../Advertisement.cpp ../Advertisement.h
-	$(CC) $(CFLAGS) Advertisement.cpp
+	$(CC) $(CFLAGS) ../Advertisement.cpp
+
+GameObject.o: ../GameObject.cpp ../GameObject.h
+	$(CC) $(CFLAGS) ../GameObject.cpp
 
 clean:
 	rm -f *.o *~ poker
