--- a/D1/Makefile
+++ b/D1/Makefile
@@ -4,7 +4,7 @@ LFLAGS = -lncursesw
 
 all: poker
 
-poker: displayD1.o Frame.o Card.o Hand.o Deck.o Player.o HumanPlayer.o AI.o Poker.o
+poker: displayD1.o Frame.o Card.o HandD1.o DeckD1.o Player.o HumanPlayer.o AI.o Poker.o
 
 AI.o: AI.cpp AI.h
 	$(CC) $(CFLAGS) AI.cpp
@@ -12,8 +12,8 @@ AI.o: AI.cpp AI.h
 Card.o: Card.cpp Card.h
 	$(CC) $(CFLAGS) Card.cpp
 
-Deck.o: Deck.cpp Deck.h
-	$(CC) $(CFLAGS) Deck.cpp
+DeckD1.o: DeckD1.cpp DeckD1.h
+	$(CC) $(CFLAGS) DeckD1.cpp
 
 DeckDriver.o: DeckDriver.cpp
 	$(CC) $(CFLAGS) DeckDriver.cpp
@@ -24,8 +24,8 @@ displayD1.o: displayD1.cpp displayD1.h
 Frame.o: Frame.cpp Frame.h
 	$(CC) $(CFLAGS) Frame.cpp
 
-Hand.o: Hand.cpp Hand.h
-	$(CC) $(CFLAGS) Hand.cpp
+HandD1.o: HandD1.cpp HandD1.h
+	$(CC) $(CFLAGS) HandD1.cpp
 
 HumanPlayer.o: HumanPlayer.cpp HumanPlayer.h
 	$(CC) $(CFLAGS) HumanPlayer.cpp
