--- a/T2/Makefile
+++ b/T2/Makefile
@@ -3,13 +3,11 @@ CC=g++
 DEBUG=
 CFLAGS=-c -Wall $(DEBUG)
 LDFLAGS=-lncursesw $(DEBUG)
-SOURCES=Bet.cpp Card.cpp ComputerPlayer.cpp Dealer.cpp Deck.cpp Display.cpp Game.cpp\
-GameData.cpp Gui.cpp Hand.cpp HumanPlayer.cpp Layout.cpp MainDeck.cpp Player.cpp PlayerList.cpp\
-Point.cpp SmallDeck.cpp Poker.cpp ../GameObject.cpp ../Advertisement
+SOURCES=Bet.cpp Card.cpp ComputerPlayer.cpp Dealer.cpp Deck.cpp Display.cpp Game.cpp GameData.cpp Gui.cpp Hand.cpp HumanPlayer.cpp Layout.cpp MainDeck.cpp Player.cpp PlayerList.cpp Point.cpp SmallDeck.cpp Poker.cpp ../GameObject.cpp ../Advertisement.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=../T2.o
 
-all: clean $(SOURCES) $(EXECUTABLE)
+all: clean $(OBJECTS)
 
 display: 
 
