--- a/T1/Makefile
+++ b/T1/Makefile
@@ -6,9 +6,8 @@ CFLAGS=-c $(DEBUG)
 LDFLAGS=-lncursesw $(DEBUG)
 SOURCES=Card.cpp Card.h Computer.cpp Computer.h Dealer.cpp Dealer.h Deck.cpp Deck.h display.cpp display.h T1.cpp Move.h Player.cpp Player.h SuitValue.h User.cpp User.h
 OBJECTS=$(SOURCES:.cpp=.o)
-EXECUTABLE=../T1.o
 
-all: clean $(SOURCES) $(EXECUTABLE)
+all: clean $(OBJECTS)
 
 debug: clean
 debug: DEBUG +=-g
