--- a/T1/Makefile
+++ b/T1/Makefile
@@ -6,7 +6,7 @@ LFLAGS = -lncursesw
 
 all: poker
 
-poker: CardT1.o Computer.o Dealer.o Deck.o displayT1.o Player.o T1.o User.o
+poker: CardT1.o Computer.o Dealer.o DeckT1.o displayT1.o PlayerT1.o T1.o User.o
 
 CardT1.o: CardT1.cpp CardT1.h
 	$(CC) $(CFLAGS) CardT1.cpp
@@ -17,14 +17,14 @@ Computer.o: Computer.cpp Computer.h
 Dealer.o: Dealer.cpp
 	$(CC) $(CFLAGS) Dealer.cpp
 
-Deck.o: Deck.cpp Deck.h
-	$(CC) $(CFLAGS) Deck.cpp
+DeckT1.o: DeckT1.cpp DeckT1.h
+	$(CC) $(CFLAGS) DeckT1.cpp
 
 displayT1.o: displayT1.cpp displayT1.h
 	$(CC) $(CFLAGS) displayT1.cpp
 
-Player.o: Player.cpp Player.h
-	$(CC) $(CFLAGS) Player.cpp
+PlayerT1.o: PlayerT1.cpp PlayerT1.h
+	$(CC) $(CFLAGS) PlayerT1.cpp
 
 T1.o: T1.cpp T1.h
 	$(CC) $(CFLAGS) T1.cpp
