--- a/T2/Makefile
+++ b/T2/Makefile
@@ -9,58 +9,58 @@ all: poker
 poker: Bet.o Card.o ComputerPlayer.o Dealer.o Deck.o T2Display.o Game.o GameData.o Gui.o Hand.o HumanPlayer.o 	Layout.o 	MainDeck.o 	Player.o 	PlayerList.o 	Point.o 	Poker.o 	SmallDeck.o
 
 Bet.o: Bet.cpp Bet.h
-	$(CC) $(CFLAGS) Bet.cpp
+	$(CC) $(CFLAGS) Bet.cpp -o ../Objects/Bet.o
 
 Card.o: Card.cpp Card.h
-	$(CC) $(CFLAGS) Card.cpp
+	$(CC) $(CFLAGS) Card.cpp -o ../Objects/Card.o
 
 ComputerPlayer.o: ComputerPlayer.cpp ComputerPlayer.h
-	$(CC) $(CFLAGS) ComputerPlayer.cpp
+	$(CC) $(CFLAGS) ComputerPlayer.cpp -o ../Objects/ComputerPlayer.o
 
 Dealer.o: Dealer.cpp Dealer.h
-	$(CC) $(CFLAGS) Dealer.cpp
+	$(CC) $(CFLAGS) Dealer.cpp -o ../Objects/Dealer.o
 
 Deck.o: Deck.cpp Deck.h
-	$(CC) $(CFLAGS) Deck.cpp
+	$(CC) $(CFLAGS) Deck.cpp -o ../Objects/Deck.o
 
 T2Display.o: T2Display.cpp T2Display.h
-	$(CC) $(CFLAGS) T2Display.cpp
+	$(CC) $(CFLAGS) T2Display.cpp -o ../Objects/T2Display.o
 
 Game.o: Game.cpp Game.h
-	$(CC) $(CFLAGS) Game.cpp
+	$(CC) $(CFLAGS) Game.cpp -o ../Objects/Game.o
 
 GameData.o: GameData.cpp GameData.h
-	$(CC) $(CFLAGS) GameData.cpp
+	$(CC) $(CFLAGS) GameData.cpp -o ../Objects/GameData.o
 
 Gui.o: Gui.cpp Gui.h
-	$(CC) $(CFLAGS) Gui.cpp
+	$(CC) $(CFLAGS) Gui.cpp -o ../Objects/Gui.o
 
 Hand.o: Hand.cpp Hand.h
-	$(CC) $(CFLAGS) Hand.cpp
+	$(CC) $(CFLAGS) Hand.cpp -o ../Objects/Hand.o
 
 HumanPlayer.o: HumanPlayer.cpp HumanPlayer.h
-	$(CC) $(CFLAGS) HumanPlayer.cpp
+	$(CC) $(CFLAGS) HumanPlayer.cpp -o ../Objects/HumanPlayer.o
 
 Layout.o: Layout.cpp Layout.h
-	$(CC) $(CFLAGS) Layout.cpp
+	$(CC) $(CFLAGS) Layout.cpp -o ../Objects/Layout.o
 
 MainDeck.o: MainDeck.cpp MainDeck.h
-	$(CC) $(CFLAGS) MainDeck.cpp
+	$(CC) $(CFLAGS) MainDeck.cpp -o ../Objects/MainDeck.o
 
 Player.o: Player.cpp Player.h
-	$(CC) $(CFLAGS) Player.cpp
+	$(CC) $(CFLAGS) Player.cpp -o ../Objects/Player.o
 
 PlayerList.o: PlayerList.cpp PlayerList.h
-	$(CC) $(CFLAGS) PlayerList.cpp
+	$(CC) $(CFLAGS) PlayerList.cpp -o ../Objects/PlayerList.o
 
 Point.o: Point.cpp Point.h
-	$(CC) $(CFLAGS) Point.cpp
+	$(CC) $(CFLAGS) Point.cpp -o ../Objects/Point.o
 
 Poker.o: Poker.cpp
-	$(CC) $(CFLAGS) Poker.cpp
+	$(CC) $(CFLAGS) Poker.cpp -o ../Objects/Poker.o
 
 SmallDeck.o: SmallDeck.cpp SmallDeck.h
-	$(CC) $(CFLAGS) SmallDeck.cpp
+	$(CC) $(CFLAGS) SmallDeck.cpp -o ../Objects/SmallDeck.o
 
 clean:
 	rm -f *.o
