--- a/T2/Makefile
+++ b/T2/Makefile
@@ -39,7 +39,7 @@ Hand.o: Hand.cpp Hand.h
 	$(CC) $(CFLAGS) Hand.cpp -o ../Objects/Hand.o
 
 T2HumanPlayer.o: T2HumanPlayer.cpp T2HumanPlayer.h
-	$(CC) $(CFLAGS) T2HumanPlayer.cpp
+	$(CC) $(CFLAGS) T2HumanPlayer.cpp -o ../Objects/T2HumanPlayer.o
 
 Layout.o: Layout.cpp Layout.h
 	$(CC) $(CFLAGS) Layout.cpp -o ../Objects/Layout.o
