--- a/D1/Makefile
+++ b/D1/Makefile
@@ -6,8 +6,8 @@ all: poker
 
 poker: displayD1.o Frame.o CardD1.o HandD1.o DeckD1.o PlayerD1.o HumanPlayer.o AI.o Poker.o
 
-standalone: displayD1.o Frame.o CardD1.o HandD1.o DeckD1.o PlayerD1.o HumanPlayer.o AI.o Poker.o
-	$(CC) PokerDriver.cpp displayD1.o Frame.o CardD1.o HandD1.o DeckD1.o PlayerD1.o HumanPlayer.o AI.o Poker.o $(LFLAGS) -o standalone
+standalone: displayD1.o Frame.o CardD1.o HandD1.o DeckD1.o PlayerD1.o HumanPlayer.o AI.o Poker.o ../Advertisement.o ../Timer.o ../GameObject.o
+	$(CC) PokerDriver.cpp displayD1.o Frame.o CardD1.o HandD1.o DeckD1.o PlayerD1.o HumanPlayer.o AI.o Poker.o ../Advertisement.o ../Timer.o ../GameObject.o $(LFLAGS) -o standalone
 
 debug: CFLAGS += -g
 debug: poker
@@ -22,7 +22,7 @@ DeckD1.o: DeckD1.cpp DeckD1.h
 	$(CC) $(CFLAGS) DeckD1.cpp -o DeckD1.o
 
 displayD1.o: displayD1.cpp displayD1.h
-	$(CC) $(CFLAGS) displayD1.cpp -o displayD1.o
+	$(CC) $(CFLAGS) displayD1.cpp -o displayD1.o $(LFLAGS)
 
 Frame.o: Frame.cpp Frame.h
 	$(CC) $(CFLAGS) Frame.cpp -o Frame.o
@@ -38,6 +38,15 @@ PlayerD1.o: PlayerD1.cpp PlayerD1.h
 
 Poker.o: Poker.cpp Poker.h
 	$(CC) $(CFLAGS) Poker.cpp -o Poker.o
+
+../Advertisment.o: ../Advertisement.cpp ../Advertisement.h 
+	$(CC) $(CFLAGS) ../Advertisement.cpp -o ../Advertisment.o
+
+../Timer.o: ../Timer.cpp ../Timer.h 
+	$(CC) $(CFLAGS) ../Timer.cpp -o ../Timer.o
+
+../GameObject.o: ../GameObject.cpp ../GameObject.h 
+	$(CC) $(CFLAGS) ../GameObject.cpp -o ../GameObject.o
 
 clean:
 	rm -f *.o
